jump fix

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,6 +10,7 @@ html, body {
 	max-width:2000px;
 	// overflow-x:hidden;
 	margin:0 auto;
+	min-height:100px;
 }
 
 
